<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.car.Car4fFragment">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_start_car_4f_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="40dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_start_car_4f_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="290dp" />

    <ImageView
        android:id="@+id/carimage_4f"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/carimage_4f"
        tools:ignore="MissingConstraints"
        android:contentDescription="@string/todo" />


    <TextView
        android:id="@+id/car4f_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/string_car4f_1"
        android:textSize="20sp"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/carimage_4f"
        app:layout_constraintStart_toStartOf="@id/guideline_start_car_4f_1"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="121dp"
        tools:layout_editor_absoluteY="569dp" />

    <TextView
        android:id="@+id/car4f_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/string_car4f_2"
        android:textSize="20sp"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/carimage_4f"
        app:layout_constraintStart_toStartOf="@id/guideline_start_car_4f_2"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteY="412dp" />

    <TextView
        android:id="@+id/car4f_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/string_car4f_3"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toBottomOf="@id/car4f_1"
        app:layout_constraintStart_toStartOf="@id/guideline_start_car_4f_1"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="121dp"
        tools:layout_editor_absoluteY="722dp" />

    <TextView
        android:id="@+id/car4f_4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/string_car4f_4"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toBottomOf="@id/car4f_2"
        app:layout_constraintStart_toStartOf="@id/guideline_start_car_4f_2"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="121dp"
        tools:layout_editor_absoluteY="722dp" />

    <TextView
        android:id="@+id/car4f_5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/string_car4f_5"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toBottomOf="@id/car4f_3"
        app:layout_constraintStart_toStartOf="@id/guideline_start_car_4f_1"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="121dp"
        tools:layout_editor_absoluteY="722dp" />
    <TextView
        android:id="@+id/car4f_6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/string_car4f_6"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toBottomOf="@id/car4f_4"
        app:layout_constraintStart_toStartOf="@id/guideline_start_car_4f_2"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="121dp"
        tools:layout_editor_absoluteY="722dp" />
    <TextView
        android:id="@+id/car4f_7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/string_car4f_7"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toBottomOf="@id/car4f_5"
        app:layout_constraintStart_toStartOf="@id/guideline_start_car_4f_1"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="121dp"
        tools:layout_editor_absoluteY="722dp" />
    <TextView
        android:id="@+id/car4f_8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/string_car4f_8"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toBottomOf="@id/car4f_6"
        app:layout_constraintStart_toStartOf="@id/guideline_start_car_4f_2"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="121dp"
        tools:layout_editor_absoluteY="722dp" />
    <TextView
        android:id="@+id/car4f_9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/string_car4f_9"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toBottomOf="@id/car4f_7"
        app:layout_constraintStart_toStartOf="@id/guideline_start_car_4f_1"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="121dp"
        tools:layout_editor_absoluteY="722dp" />
    <TextView
        android:id="@+id/car4f_10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/string_car4f_10"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toBottomOf="@id/car4f_8"
        app:layout_constraintStart_toStartOf="@id/guideline_start_car_4f_2"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="121dp"
        tools:layout_editor_absoluteY="722dp" />
    <TextView
        android:id="@+id/car4f_11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/string_car4f_11"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toBottomOf="@id/car4f_9"
        app:layout_constraintStart_toStartOf="@id/guideline_start_car_4f_1"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="121dp"
        tools:layout_editor_absoluteY="722dp" />



</androidx.constraintlayout.widget.ConstraintLayout>