<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.student.Student5fFragment">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_start_student_5f_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="40dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_start_student_5f_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="290dp" />

    <ImageView
        android:id="@+id/studentimage_5f"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/todo"
        android:src="@drawable/student5f_image"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/student5f_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/string_student5f_1"
        android:textSize="20sp"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/studentimage_5f"
        app:layout_constraintStart_toStartOf="@id/guideline_start_student_5f_1" />

    <TextView
        android:id="@+id/student5f_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/string_student5f_2"
        android:textSize="20sp"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/studentimage_5f"
        app:layout_constraintStart_toStartOf="@id/guideline_start_student_5f_2" />

    <TextView
        android:id="@+id/student5f_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/string_student5f_3"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toBottomOf="@id/student5f_1"
        app:layout_constraintStart_toStartOf="@id/guideline_start_student_5f_1" />

    <TextView
        android:id="@+id/student5f_4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/string_student5f_4"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toBottomOf="@id/student5f_2"
        app:layout_constraintStart_toStartOf="@id/guideline_start_student_5f_2" />

    <TextView
        android:id="@+id/student5f_5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/string_student5f_5"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toBottomOf="@id/student5f_3"
        app:layout_constraintStart_toStartOf="@id/guideline_start_student_5f_1" />

    <TextView
        android:id="@+id/student5f_6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/string_student5f_6"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toBottomOf="@id/student5f_4"
        app:layout_constraintStart_toStartOf="@id/guideline_start_student_5f_2" />

</androidx.constraintlayout.widget.ConstraintLayout>