<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="@dimen/nav_header_height"
    android:background="@drawable/side_nav_bar"
    android:gravity="bottom"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:theme="@style/ThemeOverlay.AppCompat.Dark">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginBottom="-80dp"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="50dp"
        android:contentDescription="@string/nav_header_desc"
        app:srcCompat="@drawable/daelimlogo" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:layout_marginLeft="130dp"
        android:layout_marginTop="10dp"
        android:text="@string/Idx"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        tools:ignore="RtlSymmetry" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:paddingBottom="5dp"
        android:text="@string/nav_header_title"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

</LinearLayout>